# vllm-ascend

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  111  123.diff  AGENTS.md  BUG.md  C8_DEV_NOTES.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  Dockerfile.310p  Dockerfile.310p.openEuler  Dockerfile.a3  Dockerfile.a3.openEuler  Dockerfile.a5  Dockerfile.a5.openEuler  Dockerfile.openEuler  Dockerfile.pto  Dockerfile_copy.openEuler  PD_MAMBA_ROUTING_DESIGN.md  PROPOSED_FIX.md  PR_DESCRIPTION.md  Qwen3-VL-8B-Instruct_vLLM_Ascend_Test_Report.md  Qwen3.5-test.md  README.md  README.zh.md  REBASE_REPORT.md  SECURITY.md  SKILL.md  Scheme_Design.txt  UTILS_REFACTORING.md  (+83 more)
.agents/: README.md
.claude/: README.md
.gemini/: styleguide.md
.github/: Dockerfile.buildwheel  Dockerfile.nightly.a2  Dockerfile.nightly.a3  PULL_REQUEST_TEMPLATE.md  TEST_README.md  actionlint.yaml  format_pr_body.sh  issue-labeler.yml  labeler.yml  mergify.yml  vllm-main-verified.commit
.workspace/: README.md
benchmarks/: README.md  aggregate_matrix.py  backend_request_func.py  bench_apc_matrix.sh  benchmark_latency.py  benchmark_serving.py  benchmark_throughput.py  dsv4_partial_prefix_cache.md  requirements-bench.txt
chenxiao/: stack.txt
cmake/: utils.cmake
configs/: phi3.5-moe-instruct-test-cases.yaml
csrc/: CMakeLists.txt  build.sh  build_aclnn.sh  build_batch_invariant_ops.sh  camem_allocator.cpp  dgemma_torch_binding.cpp  dgemma_torch_binding_meta.cpp  ops.h  pos_encoding_kernels.cpp  pytorch_npu_helper.hpp  torch_binding.cpp  torch_binding_meta.cpp  utils.h  version.info  zb_runtime.cpp  zb_runtime.h
csrc/apply_top_k_top_p/op_host/: CMakeLists.txt  aclnn_apply_top_k_top_p.cpp  aclnn_apply_top_k_top_p.h  apply_top_k_top_p_with_sorted.cpp  apply_top_k_top_p_with_sorted.h  apply_top_k_top_p_with_sorted_def.cpp  apply_top_k_top_p_with_sorted_tiling.cpp  apply_top_k_top_p_with_sorted_tiling.h
csrc/attention/paged_select_attention/op_host/: CMakeLists.txt  paged_select_attention_def.cpp  paged_select_attention_tiling.cpp  paged_select_attention_tiling.h  paged_select_attention_tiling_index.h  paged_select_attention_tiling_register.cpp
csrc/attention/paged_select_attention/op_host/op_api/: aclnn_paged_select_attention.cpp  aclnn_paged_select_attention_inner.cpp  aclnn_paged_select_attention_inner.h
csrc/attention/solve_tri/: CMakeLists.txt  README.md  solve_tri_torch_adpt.h
csrc/attention/solve_tri/docs/: aclnnSolveTri.md
csrc/attention/solve_tri/op_host/: CMakeLists.txt  solve_tri_def.cpp  solve_tri_tiling.cpp  solve_tri_tiling.h
csrc/attention/solve_tri/op_host/op_api/: aclnn_solve_tri.cpp  aclnn_solve_tri.h  solve_tri.cpp
csrc/attention/solve_tri/op_kernel/: solve_tri.cpp  solve_tri_common.h  solve_tri_cube.h  solve_tri_vector.h
csrc/attention/solve_tri/op_kernel/arch35/: mem.h  solve_tri_ascend950.h  solve_tri_ascend950_common.h
csrc/cann_ops_custom/examples/transformer/: CMakeLists.txt
csrc/cann_ops_custom/examples/transformer/grouped_matmul_swiglu_quant/: CMakeLists.txt  gen_data.py  run_grouped_matmul_swiglu_quant_case.sh  test_grouped_matmul_swiglu_quant.cpp  verify_result.py
csrc/chunk_gated_delta_rule_fwd_h/op_host/: CMakeLists.txt  chunk_gated_delta_rule_fwd_h_def.cpp  chunk_gated_delta_rule_fwd_h_tiling.cpp  chunk_gated_delta_rule_fwd_h_tiling.h
csrc/chunk_gated_delta_rule_fwd_h/op_host/op_api/: aclnn_chunk_gated_delta_rule_fwd_h.cpp  aclnn_chunk_gated_delta_rule_fwd_h.h
csrc/gather_pa_kv_cache_vllm/op_host/: CMakeLists.txt  gather_pa_kv_cache_vllm_def.cpp  gather_pa_kv_cache_vllm_infershape.cpp  gather_pa_kv_cache_vllm_tiling.cpp  gather_pa_kv_cache_vllm_tiling.h  opbase_export.h  shape_util.h
csrc/lightning_attention_prefill/op_host/: CMakeLists.txt  aclnn_lightning_attention.cpp  aclnn_lightning_attention_prefill.h  lightning_attention_prefill_def.cpp  lightning_attention_prefill_proto.cpp  lightning_attention_prefill_tiling.cpp  lightning_attention_prefill_tiling.h
csrc/moe_grouped_matmul/op_host/: CMakeLists.txt  aclnn_moe_grouped_matmul.cpp
csrc/ngram_spec_decode/op_host/: CMakeLists.txt  aclnn_ngram_spec_decode.cpp  aclnn_ngram_spec_decode.h  ngram_spec_decode_def.cpp  ngram_spec_decode_tiling.cpp
csrc/pto_chunk_gdn/: CMakeLists.txt  chunk_cumsum.cpp  chunk_h.cpp  chunk_o.cpp  mega_kernel.cpp  scaled_dot_kkt.cpp  tri_inverse_impl.cpp  wy_fast.cpp
csrc/pto_chunk_gdn/include/: kernel_utils.h
daemon/daemon/: README.md  build_pybind.sh  daemon.cpp  daemon.sh  daemon_pybind.cpp  handle_pool.cpp  main.sh  model_management.cpp  pyproject.toml  test_daemon.cpp  test_handle_pool.cpp  test_model1.cpp  test_model2.cpp  test_model3.cpp
daemon/daemon/inc/: daemon.hpp  handle_pool.hpp  model_management.hpp  utils.h
daemon/daemon/mdaemon/: cli.py
daemon/daemon/py_monitor/: command_queue.py  control_api.py  daemon_monitor.py  env_config.py  models.py  parsing.py  units.py
daemon/vllm_bifrost/: CMakeLists.txt  build.sh  camem_allocator.cpp  camem_utils.hpp  test_camem_allocator.py
distributed/: utils.py
docker/: Dockerfile  Dockerfile.a3  Dockerfile.a3.openEuler  Dockerfile.openEuler
docs/: -.-Qwen3-VL-8B-Instruct.docx  0722-test1.txt  1朱莹-vllm-ascend.docx  Makefile  Qwen3-8B.docx  Qwen3启动流程.docx  README.md  cuihuo.md  deepseek_v4_sparse_kv_experiments.md  deepseek_v4_sparse_kv_lru_mooncake_requirement.md  environment.md  environment.zh.md  installation.zh.md  liudangqi--vllm-ascend--test--report.docx  moe_offload_lrc_test_flow.md  pd.md  quantization_patch_fault_modes.csv  quick_start.md  quick_start.zh.md  requirements-docs.txt  test.docx  vllm-ascend-unified-async-startup-patch.md  北京淬火行动-邓皓-测试报告.docx  淬火培训实验提交-申朝辉  淬火培训实验结果-黄玉竹  淬火行动--刘栋.docx  淬火行动-yxr2-Qwen3-32B-W4A4性能测试报告.md
examples/: ._offline_inference_npu.py  ._offline_inference_npu_long_seq.py  ._offline_weight_load.py  ._prompt_embed_inference.py  benchmark_qwen3_wikitext2_ppl.py  deepseek.md  demo.py  demo2.py  device_print_demo.py  dp_proxy.py  (+35 more)
(+6054 files in other folders)
