[build-system]
# Should be mirrored in requirements.txt
requires = [
    "attrs",
    "cmake>=3.26",
    "decorator",
    "einops",
    "googleapis-common-protos",
    "numpy<2.0.0",
    "packaging",
    "pip",
    "pybind11",
    "pyyaml",
    "scipy",
    "pandas",
    "pandas-stubs",
    "psutil",
    "setuptools>=64",
    "setuptools-scm>=8",
    "transformers<=4.57.1",
    "torch-npu==2.8.0",
    "torch==2.8.0",
    "torchvision",
    "wheel",
    "msgpack",
    "quart",
    "numba",
    "fastapi<0.124.0",
    "opencv-python-headless<=4.11.0.86", # Required to avoid numpy version conflict with vllm
    "compressed_tensors>=0.11.0",
    "arctic-inference==0.1.1"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
# Exclude generated protobuf files
"vllm/grpc/*_pb2.py" = ["ALL"]
"vllm/grpc/*_pb2_grpc.py" = ["ALL"]
"vllm/grpc/*_pb2.pyi" = ["ALL"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # zip without `strict=`
    "B905",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"
