[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdaemon"
version = "0.1.0"
description = "Textual monitor CLI for multimodel mdaemon_py daemon"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.58.0",
    "rich>=13.0.0",
]

[project.scripts]
mdaemon = "mdaemon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdaemon", "mdaemon.*", "py_monitor", "py_monitor.*"]